fix z-index bug on responsive header

--- a/app/Resources/sass/modules/_header.scss
+++ b/app/Resources/sass/modules/_header.scss
@@ -103,6 +103,7 @@ header {
 
       &.is-open {
         top: 70px;
+        z-index: 10;
         opacity: 1;
       }
 
